Fix Windows permission errors and installer issues
- Fix cross-device rename permission errors with better error handling
- Prevent operations on system root directories
- Add user-friendly error messages for permission issues
- Fix NSIS installer language configuration
- Improve installer to handle app closure better

--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "shortcutName": "PDF Renamer & Splitter",
-
       "deleteAppDataOnUninstall": false,
       "runAfterFinish": true,
-      "menuCategory": "PDF Tools"
+      "menuCategory": "PDF Tools",
+      "allowElevation": true,
+      "perMachine": false,
+      "warningsAsErrors": false
     },
     "mac": {
       "category": "public.app-category.productivity",
