Add installation helper tools and improve installer configuration
- Add close-app.bat to help users close the app before installing
- Add INSTALLATION_INSTRUCTIONS.txt with detailed installation steps
- Improve NSIS installer configuration to handle app closure better
- Fix JSON syntax error in package.json author field

--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
       "menuCategory": "PDF Tools",
       "allowElevation": true,
       "perMachine": false,
-      "warningsAsErrors": false
+      "warningsAsErrors": false,
+      "uninstallDisplayName": "PDF Renamer & Splitter",
+      "installerIcon": null,
+      "uninstallerIcon": null
     },
     "mac": {
       "category": "public.app-category.productivity",
