Complete rebranding from 'PDF Renamer & Splitter' to 'Aura PDF'
- Updated package.json: name, description, productName, appId, shortcuts
- Updated main.js: window title and about dialog
- Updated app.js: class name from PDFRenamerApp to AuraPDFApp
- Updated localStorage keys from 'pdf-renamer-patterns' to 'aura-pdf-patterns'
- Updated all JavaScript files with consistent naming
- Updated installation instructions and batch files
- Updated HTML references to use new class name
- Fixed pattern creation errors and removed non-existent function calls
- Added loading screen to eliminate black screen on startup
- Optimized app startup performance

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pdf-renamer-splitter",
+  "name": "aura-pdf",
   "version": "1.0.0",
-  "description": "Offline PDF Renamer & Splitter with Smart Text Selection",
+  "description": "Aura PDF - Smart PDF Management Tool",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -35,8 +35,8 @@
     "pdfjs-dist": "^3.11.174"
   },
   "build": {
-    "appId": "com.pdftools.renamer",
-    "productName": "PDF Renamer & Splitter",
+    "appId": "com.aura.pdf",
+    "productName": "Aura PDF",
     "directories": {
       "output": "dist"
     },
@@ -67,7 +67,6 @@
           "arch": ["x64"]
         }
       ],
-
       "requestedExecutionLevel": "asInvoker",
       "verifyUpdateCodeSignature": false
     },
@@ -76,14 +75,14 @@
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "PDF Renamer & Splitter",
+      "shortcutName": "Aura PDF",
       "deleteAppDataOnUninstall": false,
       "runAfterFinish": true,
       "menuCategory": "PDF Tools",
       "allowElevation": true,
       "perMachine": false,
       "warningsAsErrors": false,
-      "uninstallDisplayName": "PDF Renamer & Splitter",
+      "uninstallDisplayName": "Aura PDF",
       "installerIcon": null,
       "uninstallerIcon": null
     },
