--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "archiver": "^5.3.1",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.1.1",
-    "pdfjs-dist": "^3.11.174"
+    "pdfjs-dist": "^3.11.174",
+    "yauzl": "^3.2.0",
+    "yazl": "^3.3.1"
   },
   "build": {
     "appId": "com.aura.pdf",
@@ -60,11 +62,15 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "requestedExecutionLevel": "asInvoker",
@@ -91,7 +97,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ]
     },
