Fix Windows build: skip native module rebuild
- Added electronRebuildConfig to skip prebuild
- Updated GitHub Actions to clean install without package-lock
- This prevents canvas/Cairo dependency errors in CI/CD

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   "build": {
     "appId": "com.aura.pdf",
     "productName": "Aura PDF™",
+    "electronRebuildConfig": {
+      "prebuild": false
+    },
     "directories": {
       "output": "dist"
     },
