--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -19,8 +19,10 @@ jobs:
         node-version: '18'
         cache: 'npm'
     
-    - name: Install dependencies
-      run: npm ci
+    - name: Clean install dependencies
+      run: |
+        if (Test-Path "package-lock.json") { Remove-Item "package-lock.json" }
+        npm install
     
     - name: Build Windows app
       run: npm run build:win
