Fix electron-builder config: use correct rebuild options
- Changed electronRebuildConfig to npmRebuild and nodeGypRebuild
- These are the correct electron-builder options to skip native module compilation

--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
   "build": {
     "appId": "com.aura.pdf",
     "productName": "Aura PDF™",
-    "electronRebuildConfig": {
-      "prebuild": false
-    },
+    "npmRebuild": false,
+    "nodeGypRebuild": false,
     "directories": {
       "output": "dist"
     },
