--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -25,6 +25,8 @@ jobs:
         npm install
     
     - name: Build Windows app
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: npm run build:win
     
     - name: Verify build artifacts
