--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
       ],
       "requestedExecutionLevel": "asInvoker",
       "verifyUpdateCodeSignature": false,
-      "icon": "assets/icons/aura-icon.png"
+      "icon": "assets/icons/aura-icon.png",
+      "legalTrademarks": "Aura PDF™ is a trademark of Wycliff Matovu",
+      "publisherName": "Wycliff Matovu"
     },
     "nsis": {
       "oneClick": false,
@@ -99,7 +101,11 @@
       "warningsAsErrors": false,
       "uninstallDisplayName": "Aura PDF™",
       "installerIcon": null,
-      "uninstallerIcon": null
+      "uninstallerIcon": null,
+      "installerHeaderIcon": "assets/icons/aura-icon.png",
+      "displayLanguageSelector": false,
+      "include": null,
+      "guid": "aura-pdf-app-2.0.0"
     },
     "mac": {
       "category": "public.app-category.productivity",
